methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:32: error: not found: type color
def motif2(s:color) {
             ^